clusters/moo-cluster/kuby-test/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubytest-production
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubytest
    role: web
  name: kubytest-svc
  namespace: kubytest-production
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: kubytest
    role: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    getkuby.io/dockerfile-checksum: 161fb80039c2085fedbfccda95e7df4cea676b119e3da8caa396da4b9ef7bd27
  labels:
    app: kubytest
    role: web
  name: kubytest-web
  namespace: kubytest-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubytest
      role: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubytest
        role: web
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: kubytest-config
        - secretRef:
            name: kubytest-secrets
        image: kingdonb/kuby-tester:20211206201922
        imagePullPolicy: IfNotPresent
        name: kubytest-web
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: "/healthz"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
      imagePullSecrets:
      - name: kubytest-registry-secret
      restartPolicy: Always
      serviceAccountName: kubytest-sa
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver.acme
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: kubytest-ingress
  namespace: kubytest-production
spec:
  rules:
  - host: kuby-test.hephy.pro
    http:
      paths:
      - backend:
          serviceName: kubytest-svc
          servicePort: 8080
        path: "/"
  - host: kuby-test.hephy.pro
    http:
      paths:
      - backend:
          serviceName: kubytest-assets-svc
          servicePort: 8082
        path: "/assets"
      - backend:
          serviceName: kubytest-assets-svc
          servicePort: 8082
        path: "/packs"
  tls:
  - hosts:
    - kuby-test.hephy.pro
    secretName: kubytest-tls
#---
#kind: Postgres
#spec:
#  storageType: Durable
#  terminationPolicy: DoNotTerminate
#  storage:
#    accessModes:
#    - ReadWriteOnce
#    resources:
#      requests:
#        storage: 10Gi
#    storageClassName: do-block-storage
#  databaseSecret:
#    secretName: kubytest-web-postgres-secret
#  version: '11.2'
#  standbyMode: Hot
#  streamingMode: asynchronous
#apiVersion: kubedb.com/v1alpha1
#metadata:
#  name: kubytest-web-postgres
#  namespace: kubytest-production
#---
#kind: Postgres
#spec:
#  storageType: Durable
#  terminationPolicy: DoNotTerminate
#  storage:
#    accessModes:
#    - ReadWriteOnce
#    resources:
#      requests:
#        storage: 10Gi
#    storageClassName: do-block-storage
#  databaseSecret:
#    secretName: kubytest-web-postgres-secret
#  version: '11.2'
#  standbyMode: Hot
#  streamingMode: asynchronous
#apiVersion: kubedb.com/v1alpha1
#metadata:
#  name: kubytest-web-postgres
#  namespace: kubytest-production
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubytest
    role: assets
  name: kubytest-assets-svc
  namespace: kubytest-production
spec:
  ports:
  - name: http
    port: 8082
    protocol: TCP
    targetPort: http
  selector:
    app: kubytest
    role: assets
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubytest
    role: assets
  name: kubytest-assets
  namespace: kubytest-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubytest
      role: assets
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubytest
        role: assets
    spec:
      containers:
      - image: kingdonb/kuby-tester:20211206201922-assets
        imagePullPolicy: IfNotPresent
        name: kubytest-assets
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: "/500.html"
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: "/etc/nginx/nginx.conf"
          name: nginx-config
          subPath: nginx.conf
      imagePullSecrets:
      - name: kubytest-registry-secret
      restartPolicy: Always
      serviceAccountName: kubytest-assets-sa
      volumes:
      - configMap:
          name: kubytest-assets-nginx-config
        name: nginx-config
#---
#apiVersion: cert-manager.io/v1alpha2
#kind: ClusterIssuer
#metadata:
#  name: letsencrypt-production
#  namespace: cert-manager
#spec:
#  acme:
#    server: https://acme-v02.api.letsencrypt.org/directory
#    email: yebyen@gmail.com
#    privateKeySecretRef:
#      name: letsencrypt-production
#    solvers:
#    - http01:
#        ingress:
#          class: nginx
